Fixed login page where text was not centered, added a proper Registration button as well as Forgot Password.

--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -36,6 +36,18 @@ button {
   box-shadow: 5px 5px 5px #888888;
 }
 
+.buttonReset {
+  background-color: #9C9E9B;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  box-shadow: 5px 5px 5px #888888;
+}
+
 button:hover {
   opacity: 0.8;
 }
